--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   like_button: ^2.0.4
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
