--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   like_button: ^2.0.4
   shared_preferences: ^2.0.15
+  get: ^4.6.5
 
 
   # The following adds the Cupertino Icons font to your application.
