--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  path_provider: ^2.0.11
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
