--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^9.2.0
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
+  firebase_auth: ^3.3.20
 
 dev_dependencies:
   flutter_test:
