--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
   firebase_auth: ^3.3.20
+  firebase_storage: ^10.2.18
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
