--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,12 @@ dependencies:
   http: ^0.13.4
   path_provider: ^2.0.11
   permission_handler: ^9.2.0
-  firebase_core: ^1.17.0
-  cloud_firestore: ^3.1.17
-  firebase_auth: ^3.3.20
-  firebase_storage: ^10.2.18
   image_picker: ^0.8.5+3
   hive: ^2.2.3
-  # firebase_messaging: 11.4.0
+  hive_flutter: ^1.1.0
+  url_launcher: ^6.1.4
+  file_picker: ^4.6.1
+  video_player: ^2.4.5
 
 dev_dependencies:
   flutter_test:
