--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,12 @@ dependencies:
   url_launcher: ^6.1.4
   file_picker: ^4.6.1
   video_player: ^2.4.5
+  share_plus: ^4.0.10
+  local_auth: ^2.1.0
+  location: ^4.4.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
 
@@ -57,6 +61,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/pumdikot.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
